--- a/jn-spring-boot-aws/jn-starter-aws-kinesis-producer/pom.xml
+++ b/jn-spring-boot-aws/jn-starter-aws-kinesis-producer/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jn-starter-aws-kinesis</artifactId>
+    <artifactId>jn-starter-aws-kinesis-producer</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
