--- a/jn-bom/pom.xml
+++ b/jn-bom/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>channels-utils</artifactId>
+        <artifactId>jn-utils</artifactId>
         <groupId>com.jorgenota.utils</groupId>
         <version>0.1.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
@@ -22,6 +22,11 @@
             <dependency>
                 <groupId>com.jorgenota.utils</groupId>
                 <artifactId>jn-function</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.jorgenota.utils</groupId>
+                <artifactId>jn-messaging</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
