--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>jn-base</module>
         <module>jn-function</module>
+        <module>jn-messaging</module>
         <module>jn-aws</module>
         <module>jn-spring-boot-aws</module>
         <module>jn-bom</module>
