--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ dist/
 nbdist/
 .nb-gradle/
 
-# Visual Studio Code
+### Visual Studio Code ###
 vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
