Rework of jn-spring-boot-aws following new approach
Some modules have been removed as part of this restart:
- jn-starter-aws-kinesis-consumer
- jn-starter-aws-kinesis-producer
- jn-starter-aws-sqs-consumer

Some modules have been added:
- New jn-aws-test-support module with utilities for tests
- New jn-aws-autoconfigure module that set ups an AWS environment to
  be used by the starters that will be created for different AWS
  services

Some modules have been reworked:
- Rework of jn-starter-aws-s3 that uses the 2 new modules

--- a/jn-spring-boot-aws/jn-aws-autoconfigure/pom.xml
+++ b/jn-spring-boot-aws/jn-aws-autoconfigure/pom.xml
@@ -9,17 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jn-starter-aws-s3</artifactId>
+    <artifactId>jn-aws-autoconfigure</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.jorgenota.utils</groupId>
-            <artifactId>jn-aws-autoconfigure</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-s3</artifactId>
+            <artifactId>aws-java-sdk-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -27,10 +22,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.jorgenota.utils</groupId>
-            <artifactId>jn-aws-test-support</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
     </dependencies>
 
