--- a/jn-spring-boot-aws/pom.xml
+++ b/jn-spring-boot-aws/pom.xml
@@ -14,8 +14,12 @@
 
     <modules>
         <module>jn-aws-autoconfigure</module>
-        <module>jn-starter-aws-s3</module>
         <module>jn-aws-test-support</module>
+        <module>jn-starter-aws-kinesis</module>
+        <module>jn-starter-aws-s3</module>
+        <module>jn-starter-aws-ses</module>
+        <module>jn-starter-aws-sns</module>
+        <module>jn-starter-aws-sqs</module>
     </modules>
 
     <dependencies>
