--- a/jn-spring-boot-aws/jn-starter-aws-ses/pom.xml
+++ b/jn-spring-boot-aws/jn-starter-aws-ses/pom.xml
@@ -27,6 +27,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.jorgenota.utils</groupId>
             <artifactId>jn-aws-test-support</artifactId>
             <version>${project.version}</version>
