--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,16 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <junit.jupiter.version>5.0.3</junit.jupiter.version>
+        <junit.version>5.7.0</junit.version>
 
         <!-- libraries versions -->
-        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
-        <awsjavasdk.version>1.11.283</awsjavasdk.version>
-        <amazon-kinesis-client.version>1.9.0</amazon-kinesis-client.version>
+        <spring-boot.version>2.4.0</spring-boot.version>
+        <awsjavasdk.version>1.11.911</awsjavasdk.version>
+        <amazon-kinesis-client.version>1.14.0</amazon-kinesis-client.version>
 
         <!-- plugins versions -->
-        <junit.platform.version>1.0.3</junit.platform.version>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
     </properties>
 
 
@@ -103,9 +103,11 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>${junit.jupiter.version}</version>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -119,29 +121,16 @@
                     <version>${maven-surefire-plugin.version}</version>
                     <dependencies>
                         <dependency>
-                            <groupId>org.junit.platform</groupId>
-                            <artifactId>junit-platform-surefire-provider</artifactId>
-                            <version>${junit.platform.version}</version>
-                        </dependency>
-                        <dependency>
                             <groupId>org.junit.jupiter</groupId>
                             <artifactId>junit-jupiter-engine</artifactId>
-                            <version>${junit.jupiter.version}</version>
+                            <version>${junit.version}</version>
                         </dependency>
                     </dependencies>
-                    <configuration>
-                        <includes>
-                            <include>**/*Tests.java</include>
-                            <include>**/*Test.java</include>
-                        </includes>
-                        <excludes>
-                            <exclude>**/Abstract*.java</exclude>
-                        </excludes>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${maven-failsafe-plugin.version}</version>
                     <executions>
                         <execution>
                             <goals>
