Add jn-aws-integration-test module (uses LocalStack to mock AWS stuff)

--- a/jn-spring-boot-aws/pom.xml
+++ b/jn-spring-boot-aws/pom.xml
@@ -20,6 +20,7 @@
         <module>jn-starter-aws-ses</module>
         <module>jn-starter-aws-sns</module>
         <module>jn-starter-aws-sqs</module>
+        <module>jn-aws-integration-test</module>
     </modules>
 
 </project>
