--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring-boot.version>2.4.0</spring-boot.version>
         <awsjavasdk.version>1.11.911</awsjavasdk.version>
         <amazon-kinesis-client.version>1.14.0</amazon-kinesis-client.version>
+        <localstack.version>0.2.5</localstack.version>
 
         <!-- plugins versions -->
         <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
@@ -108,6 +109,12 @@
                 <version>${junit.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>cloud.localstack</groupId>
+                <artifactId>localstack-utils</artifactId>
+                <version>${localstack.version}</version>
+                <scope>test</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
