Add S3 client configuration options (pathStyleAcces, ...)

--- a/jn-spring-boot-aws/jn-aws-integration-test/src/test/resources/integrationtest.properties
+++ b/jn-spring-boot-aws/jn-aws-integration-test/src/test/resources/integrationtest.properties
@@ -3,6 +3,7 @@ aws.context.accessKey=test
 aws.context.secretKey=test
 aws.kinesis.endpoint=http://localhost:4566
 aws.s3.endpoint=http://localhost.localstack.cloud:4566
+aws.s3.pathStyleAccess=true
 aws.ses.endpoint=http://localhost:4566
 aws.sns.endpoint=http://localhost:4566
 aws.sqs.endpoint=http://localhost:4566
